--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,8 @@ services:
     env: python
     plan: free
     buildCommand: |
-      apt-get update && apt-get install -y tesseract-ocr
+      apt-get update
+      apt-get install -y tesseract-ocr
       pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
